fix spacing

--- a/look.css
+++ b/look.css
@@ -1,5 +1,4 @@
 body{
-	font-size: 20px;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	color: #333;
 	background-color:#daffb3;
@@ -34,8 +33,7 @@ h1{
   text-align: center;
   margin: 0;
   background-color: lightblue;
-  padding: 35px;
-  font-size: 30px;
+  padding: 30px;
 }
 
 #subtitle {
@@ -44,4 +42,5 @@ h1{
 
 #quiz {
 	padding-top:25px;
+	font-size: 20px;
 }
